work in progress......

--- a/frontend/register.html
+++ b/frontend/register.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html>
+<!DOCTYPE html>
+<html>
     <head>
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link rel="stylesheet" type="text/css" href="style.css">
@@ -33,7 +34,7 @@
 
         <main>
             <p class="main-header">Register For The Internship Program</p>
-                <form>
+                <form >
                     
                     <input type="text" name="name" id="name" placeholder="Name (First and Last)"><br>
                     <input type="text" name="username" id="username" placeholder="Username"><br>
